--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,17 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^23.6.0",
     "eslint": "^5.8.0",
+    "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-vue": "^5.0.0",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.5",
+    "prettier": "1.16.4",
     "vue-template-compiler": "^2.5.21"
+  },
+  "lint-staged": {
+    "{,src/**/}*.{md,json,ts,css,scss,yml}": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
