squash! add prettier, husky and lint-staged

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,7 @@
     "vue-template-compiler": "^2.5.21"
   },
   "lint-staged": {
-    "{,src/**/}*.{md,json,ts,css,scss,yml}": [
+    "{,src/**/}*.{md,json,ts,css,scss,yml,vue}": [
       "prettier --write",
       "git add"
     ]
