--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "eslint": "^5.8.0",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-vue": "^5.0.0",
+    "flush-promises": "^1.0.2",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
     "prettier": "1.16.4",
