--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -20,6 +20,7 @@
       <plugin>
         <groupId>com.github.eirslett</groupId>
         <artifactId>frontend-maven-plugin</artifactId>
+        <version>${frontend-maven-plugin.version}</version>
         <executions>
           <!-- Install our node and npm version to run npm/node scripts-->
           <execution>
