--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,9 @@ install: true
 
 script: ./mvnw clean install
 
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
+
 cache:
   directories:
     - $HOME/.m2
