update version to 1.0.0

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -5,12 +5,12 @@
   <parent>
     <groupId>dev.cremich</groupId>
     <artifactId>sse-server</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
   </parent>
 
   <artifactId>backend</artifactId>
   <packaging>jar</packaging>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1.0.0</version>
 
   <dependencies>
     <dependency>
