--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>dev.cremich</groupId>
     <artifactId>sse-server</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
   </parent>
 
   <properties>
